# journey

./: ,  README.md  bookmarks.md  nohup.out  resolv.conf
computer-english/: computer-english.md  high-frequency.md
develop/basic/: How_to_Ask.md  content_document.md  namespace.md  regular_expression.md  release.md  words.md  write_document.md
develop/code-review/: code-review-lists.md  code-review.md
develop/high-efficiency/: time_control.md
develop/teamwork/: about_work.md  debug.md  employee.md  interview.md
languages/qt/: QComboBox-beauty.md  QFormLayout.md  QHBoxLayout.md  QLabel.md  QPalette.md  QThread.md  QTimer.md  QTranslator.md  QtCreator.md  designer.md  qt-all.list  qt-code-style.md
life/: Ask-questions-smart.md  Poems.md  Reading.md  annual-summary-report.md  become-regular-worker.md  beijing-accumulation-funds.md  beijing-integration-settle.md  blogs.md  brain.md  deliberate-practice.md  edu.md  google.md  habits.md  iceberg-model.md  mountains.md  reading-remark.md  reading-skill.md  reading.md  sorts.md  soul.md  testing.md  tunnel.md
life/delicious-food/: README.md
life/house/: decoration.md
managements/: README.md
managements/git/: hosts  (+2 more)
training/: README.md  nohup.out  run-process.md
training/automake/automake-base/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  hello
training/automake/automake-base/.deps/: hello-hello.Po
training/automake/automake-base/autom4te.cache/: output.0  output.2  requests  traces.1  traces.2
training/automake/automake-base/src/: hello.c
training/automake/automake-flat/: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  hello
training/automake/automake-flat/autom4te.cache/: output.1  requests  traces.0  traces.1
training/automake/automake-shallow/: Makefile  Makefile.am  Makefile.in  README.md  clear.sh  config.status  configure  configure.ac
training/automake/automake-shallow/.deps/: cn.Po  hello-hello.Po  hello.Po
training/automake/automake-shallow/autom4te.cache/: output.1  requests  traces.0  traces.1
training/automake/automake-shallow/cn/: Makefile  Makefile.am  Makefile.in
training/automake/automake-shallow/include/: Makefile  Makefile.am  Makefile.in
(+210 files in other folders)
